# proxTV

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  developer_requirements.txt  setup.py
cmake/: proxTVConfig.cmake  proxTVConfig.cmake.in
prox_tv/: __init__.py
src/: CMakeLists.txt  TVLPopt.cpp  TVNDopt.cpp  condat_fast_tv.cpp  condat_fast_tv.h
test/: CMakeLists.txt  test_tv1_2d.cpp
test/project_using_proxTV/: dummy.cpp
